build: edit prod build options

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,9 @@
 version: 0.2
 env:
   variables:
-    APP_NAME: "angular-cicd-pipeline-demo"
+    APP_NAME: "stockmanta"
+    BRANCH: "master"
+    ENVIRONMENT: "production"
 phases:
   install:
     runtime-versions:
@@ -14,11 +16,11 @@ phases:
   build:
     commands:
       - echo build process started now
-      - git checkout master
-      - ng build --configuration=production
+      - git checkout $BRANCH
+      - ng build --configuration=$ENVIRONMENT
   post_build:
     commands:
       - echo build process finished, we should uplload to S3 now
       - cd dist/$APP_NAME
       - ls -la
-      - aws s3 sync . s3://stockmanta/production --delete
+      - aws s3 sync . s3://stockmanta/$ENVIRONMENT --delete
