--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.6.0",
+    "dayjs": "^1.10.7",
+    "flatpickr": "^4.6.9",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
