--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "test-headless": "ng test --watch=false --browsers=ChromeHeadless --code-coverage",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "build:prod": "ng build --prod",
+    "start:prod": "http-server ./dist/stockmanta -p 4200",
+    "build-and-deploy:prod": "run-s build:prod start:prod",
+    "e2e": "start-server-and-test build-and-deploy:prod http://localhost:4200 cypress:run"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +30,7 @@
     "cypress": "^9.0.0",
     "dayjs": "^1.10.7",
     "flatpickr": "^4.6.9",
+    "run-s": "^0.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -35,12 +41,15 @@
     "@angular/compiler-cli": "~13.0.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "concurrently": "^6.4.0",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.4.3"
+    "start-server-and-test": "^1.14.0",
+    "typescript": "~4.4.3",
+    "wait-on": "^6.0.0"
   }
 }
